crates/pixi-build-rust/src/snapshots/pixi_build_rust__tests__env_vars_are_set.snap
---
source: crates/pixi-build-rust/src/main.rs
expression: generated_recipe.recipe.build.script
---
content: "[ ... script ... ]"
env:
  foo: bar
secrets: []
